Added comments to files and did a bit of cleanup

--- a/templates/upskill_photography/upload.html
+++ b/templates/upskill_photography/upload.html
@@ -24,4 +24,5 @@ Picture Upload
 	<input id="lng-input" type="hidden" name="longitude" value="">
 	<button type="submit" class="btn btn-primary">Upload</button>
 </form>
+<a class="btn btn-danger" href="{% url 'upskill_photography:index' %}">Cancel</a>
 {% endblock %}
