--- a/templates/upskill_photography/faq.html
+++ b/templates/upskill_photography/faq.html
@@ -6,5 +6,7 @@
 {% endblock %}
 
 {% block body_block %}
-	FAQ for this website
+	<h2>Frequently Asked Questions</h2>
+	<p>There currently are no faq</p>
+	<p><a href="{% url 'upskill_photography:contact' %}">Contact Us</a> if you have any questions towards this webpage</p>
 {% endblock %}
