--- a/templates/upskill_photography/search.html
+++ b/templates/upskill_photography/search.html
@@ -26,6 +26,7 @@
 				<option value="new" {% if sort_style == 'new' %}selected{% endif %}>Upload Time</option>
 				<option value="views" {% if sort_style == 'views' %}selected{% endif %}>Views</option>
 				<option value="likes" {% if sort_style == 'likes' %}selected{% endif %}>Likes</option>
+				<option value="comments" {% if sort_style == 'comments' %}selected{% endif %}>Comments</option>
 			</select>
 			<select class="form-select bg-dark text-light" aria-label="Sorting Order" name="sort_order">
 				<option value="" {% if sort_order == 'relevance' %}selected{% endif %} hidden disabled></option>
