--- a/templates/upskill_photography/index.html
+++ b/templates/upskill_photography/index.html
@@ -18,10 +18,10 @@
 			{% endfor %}
 		</ol>
 		
-		<div class="carousel-inner border border-dark rounded">
-			<div class="carousel-item active">
-				<a href="{% url 'upskill_photography:picture_view' first_picture.uploading_user.user.username first_picture.picture_id %}">
-					<img src="{{ first_picture.image.url }}" class="w-100" alt="{{ first_picture.title }}">
+		<div class="carousel-inner rounded">
+			<div class="carousel-item active" style="max-height: 80vh;">
+				<a class="d-flex align-items-center justify-content-center" href="{% url 'upskill_photography:picture_view' first_picture.uploading_user.user.username first_picture.picture_id %}">
+					<img class="mw-100" src="{{ first_picture.image.url }}" alt="{{ first_picture.title }}" style="max-height: 75vh;">
 				</a>
 				<div class="carousel-caption d-none d-md-block">
 					<a href="{% url 'upskill_photography:userprofile' first_picture.uploading_user.user.username %}">
@@ -31,9 +31,9 @@
 				</div>
 			</div>
 			{% for picture in pictures %}
-			<div class="carousel-item">
-				<a href="{% url 'upskill_photography:picture_view' picture.uploading_user.user.username picture.picture_id %}">
-					<img src="{{ picture.image.url }}" class="w-100" alt="{{ picture.title }}">
+			<div class="carousel-item" style="max-height: 80vh;">
+				<a class="d-flex align-items-center justify-content-center" href="{% url 'upskill_photography:picture_view' picture.uploading_user.user.username picture.picture_id %}">
+					<img class="mw-100" src="{{ picture.image.url }}" alt="{{ picture.title }}" style="max-height: 75vh;">
 				</a>
 				<div class="carousel-caption d-none d-md-block">
 					<a href="{% url 'upskill_photography:userprofile' picture.uploading_user.user.username %}">
