--- a/templates/upskill_photography/picture_view.html
+++ b/templates/upskill_photography/picture_view.html
@@ -9,43 +9,68 @@
 {% block body_block %}
 {% if picture %}
 <div class="row py-2">
-	<div class="col-2">
-		<p><strong>{{ picture.title }}</strong><br>
-			By <a href="{% url 'upskill_photography:userprofile' picture.uploading_user.user.username %}" style="color: black"><span>{{ picture.uploading_user.user.username }}</span></a></p>
-		<p>Category: <a href="{% url 'upskill_photography:show_category' picture.category.slug %}" style="color: black"><span>{{ picture.category.name }}</span></a></p>
-		<p>Uploaded: {{ picture.timestamp | date:"F d Y" }}</p>
-		<p>{{ picture.views }} views</p>
-		<p>
-			<span id="like_count">{{ picture.likes }}</span> likes
-			{% if user.is_authenticated %}
-			<button id="like_btn"
-					data-pictureid="{{ picture.picture_id }}"
-					class="float-right btn btn-sm"
-					type="button">
-				<img id="like-img" src="{% static 'images/like_blank.ico' %}" width="16" height="16">
-				Like
-			</button>
-			{% endif %}
-		</p>
-		{% if picture.latitude %}
-		<p>
-			Location:<br>
-			{{ picture.longitude }}, {{ picture.latitude }} (long, lat)<br><br>
-			<button id="map-toggle" data-longitude="{{ picture.longitude }}" data-latitude="{{ picture.latitude }}"class="btn btn-dark" type="button" onclick="toggleMapFunction()">Show Map</button>
-		</p>
-		{% endif %}
+	<div class="col-2 border border-dark">
+		<br>
+		<h5 class="text-center"><strong>{{ picture.title }}</strong></h5>
+		<br>
+		<table class="table-sm">
+			<tbody>
+				<tr>
+					<th scope="row" class="align-top">By</th>
+					<td><a href="{% url 'upskill_photography:userprofile' picture.uploading_user.user.username %}" style="color: black">{{ picture.uploading_user.user.username }}</a></td>
+				</tr>
+				<tr>
+					<th scope="row" class="align-top">Category</th>
+					<td><a href="{% url 'upskill_photography:show_category' picture.category.slug %}" style="color: black">{{ picture.category.name }}</a></td>
+				</tr>
+				<tr>
+					<th scope="row" class="align-top">Uploaded</th>
+					<td>{{ picture.timestamp | date:"F d Y" }}</td>
+				</tr>
+				<tr>
+					<th scope="row" class="align-top">Views</th>
+					<td>{{ picture.views }}</td>
+				</tr>
+				<tr>
+					<th scope="row" class="align-top">Likes</th>
+					<td>
+						{{ picture.likes }}
+						{% if user.is_authenticated %}
+						<button id="like_btn"
+								data-pictureid="{{ picture.picture_id }}"
+								class="float-right btn btn-sm btn-outline-dark"
+								type="button">
+							<img id="like-img" src="{% static 'images/like_blank.ico' %}" width="16" height="16">
+							Like
+						</button>
+						{% endif %}
+					</td>
+				</tr>
+				{% if picture.latitude %}
+				<tr>
+					<th scope="row" class="align-top">Location</th>
+					<td>
+						{{ picture.longitude }},<br>
+						{{ picture.latitude }}<br>
+						(lng, lat)<br><br>
+						<button id="map-toggle" data-longitude="{{ picture.longitude }}" data-latitude="{{ picture.latitude }}"class="btn btn-dark" type="button" onclick="toggleMapFunction()">Show Map</button>
+					</td>
+				</tr>
+				{% endif %}
+			</tbody>
+		</table>
 	</div>
 	
-	<div class="col-8" id="center-column">
-		<div id="img-container">
-			<img id="picture_image" src="{{ picture.image.url }}" class="img-thumbnail img-responsive" alt="{{ picture.title }}">
+	<div class="col-7" id="center-column">
+		<div id="img-container" class="d-flex align-items-center justify-content-center">
+			<img id="picture_image" src="{{ picture.image.url }}" class="img-thumbnail img-responsive" alt="{{ picture.title }}" style="max-height: 80vh;">
 		</div>
 		{% if picture.latitude %}
 		<div id="map-container" data-show-location="true"></div>
 		{% endif %}
 	</div>
 	
-	<div class="col-2 border border-dark" id="comment_column" style="overflow-y: scroll;">
+	<div class="col-3 border border-dark" id="comment_column" style="overflow-y: scroll;">
 		<p class="text-center"><strong>Comments</strong></p>
 		{% if user.is_authenticated %}
 		<div class="border border-dark rounded">
