Fixed unnecessary title field in profile picture upload

--- a/templates/upskill_photography/user_change_profile_picture.html
+++ b/templates/upskill_photography/user_change_profile_picture.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-   Change Profile Picture`
+   Change Profile Picture
 {% endblock %}
 
 {% block body_block %}
