Fixed liked count not being updated

--- a/templates/upskill_photography/picture_view.html
+++ b/templates/upskill_photography/picture_view.html
@@ -34,7 +34,7 @@
 				<tr>
 					<th scope="row" class="align-top">Likes</th>
 					<td>
-						{{ picture.likes }}
+						<span id="like_count">{{ picture.likes }}</span>
 						{% if user.is_authenticated %}
 						<button id="like_btn"
 								data-pictureid="{{ picture.picture_id }}"
